feat: update parseDelay to handle early/late flights